fixed coding arrow on mobile

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -305,8 +305,8 @@ height:100%;
 
 #coding-arrow {
 	width: 321px;
-	left: 466px;
-	top: 322px;
+	left: 432px;
+	bottom: -111px;
 }
 #sv-arrow {
 	width: 322px;
